@@ -4,6 +4,11 @@
 	* dwarf.c (display_debug_frames): Fix range checks to work on
 	32-bit binaries complied on a 64-bit host.
 
+	PR binutils/17531
+	* dwarf.c (xcmalloc): Fail if the arguments are too big.
+	(xcrealloc): Likewise.
+	(xcalloc2): Likewise.
+
 2015-02-05  Alan Modra  <amodra@gmail.com>
 
 	PR binutils/17926
